# leptos-demo

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  post-build.sh  tailwind.config.js
src/: main.rs
